Adicionando sobre no index.

--- a/index.html
+++ b/index.html
@@ -27,18 +27,19 @@
             </nav>
         </section>
     </header>
-    <section>
-        <div class="home2">
+
+        <div class="home2"> 
             <div class="position-sobre">
                 <div class="sobre-texto">
-                    <h1>Sobre</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem expedita quidem illo, enim quasi sapiente cupiditate quas! Delectus, commodi veritatis sed deleniti modi harum minima...</p>
-                    <button>Ver Mais</button>
+
+                    <h1 style="font-size: 55px; color: green;">Sobre</h1>
+                    <p style="color: white; font-size: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem expedita quidem illo, enim quasi sapiente cupiditate quas! Delectus, commodi veritatis sed deleniti modi harum minima...</p>
+                    <button style="background-color:green; color: white; width: 100px; height: 35px; border-radius: 10%;">Ver Mais</button>
+                    
                 </div>
-                <div class="imagem-sobre"></div>
+                <div class="imagem-sobre1"></div>
             </div>
         </div>
-    </section>
     
 </body>
 </html>
