Alterando o site pi

--- a/index.html
+++ b/index.html
@@ -29,17 +29,22 @@
     </header>
 
         <div class="home2"> 
-            <div class="position-sobre">
-                <div class="sobre-texto">
-
+            <div class="sobre-texto">
                     <h1 style="font-size: 55px; color: green;">Sobre</h1>
                     <p style="color: white; font-size: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem expedita quidem illo, enim quasi sapiente cupiditate quas! Delectus, commodi veritatis sed deleniti modi harum minima...</p>
                     <button style="background-color:green; color: white; width: 100px; height: 35px; border-radius: 10%;">Ver Mais</button>
-                    
-                </div>
-                <div class="imagem-sobre1"></div>
+                <div class="imagem-sobre1">
             </div>
         </div>
+        <div class="home3">
+            <div class="sobre-texto2">
+                <h1 style="font-size: 55px; color: green;">Sobre</h1>
+                <p style="color: white; font-size: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem expedita quidem illo, enim quasi sapiente cupiditate quas! Delectus, commodi veritatis sed deleniti modi harum minima...</p>
+                <button style="background-color:green; color: white; width: 100px; height: 35px; border-radius: 10%;">Ver Mais</button>
+            <div class="imagem-sobre2">
+        </div>
+    </div>
+
     
 </body>
 </html>
