--- a/index.html
+++ b/index.html
@@ -8,70 +8,75 @@
     <link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
-    <title>Bubatag</title>
+    <link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet'>
+    <title>Krono</title>
 </head>
 <body>
     <div class="wrapper">
     <header>
         <section class="background-image">
-            <nav class="menu">
-                <ul>
-                    <li><img src="imgs/logo.png" width="35px" height="35px"></li>
-                    <li><a href="#sobre">Sobre</a></li>
-                    <li><a href="#">Problemática</a></li>
-                    <li><a href="#">Mercado</a></li>
-                    <li><a href="#">Notícias</a></li>
-                    <li><a href="#">Documento</a></li>
-                    <li><a href="#team">Integrantes</a></li>
-                    <li><i class="fa fa-search"></i><input type="search" placeholder="Pesquisar..."></li>
-                </ul>
-            </nav>
+            <div class="menu">
+                <nav>
+                    <ul>
+                        <li><img src="imgs/logo-krono.png" width="45px"></li>
+                        <li><a href="#sobre">Quem somos</a></li>
+                        <li><a href="#team">Membros</a></li>
+                        <li><a href="#">Projeto</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="position-krono">
+                <img src="imgs/krono-principal.png" width="400px">
+                <p style="font-size: 32px; color: white; font-family: Audiowide; margin-left: 15px;">Nós somos a <b style="color: #E0830F;">Krono</b></p>
+            </div>
         </section>
     </header>
 
         <section class="home2" id="sobre"> <!-- Sessão home2 - Sobre -->
             <div class="position-sobre"> <!-- Posiciona o bloco de sobre primeiro -->
                 <div class="sobre-texto"> <!-- Posiciona o texto de primeiro sobre -->
-                    <h1 style="font-size: 55px; color: green;">Sobre</h1>
-                    <p style="color: white; font-size: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem expedita quidem illo, enim quasi sapiente cupiditate quas! Delectus, commodi veritatis sed deleniti modi harum minima...</p>
-                    <a href="#"><button style="background-color:green; color: white; width: 100px; height: 35px; border-radius: 10%;">Ver Mais</button></a>
+                    <h1 style="font-size: 45px; color: #E0830F; font-family: Audiowide;">Quem somos nós?</h1>
+                    <p style="color: black; font-size: 20px;"><b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem expedita quidem illo, enim quasi sapiente cupiditate quas! Delectus, commodi veritatis sed deleniti modi harum minima...</b></p>
+                    <!-- <a href="#"><button style="background-color:green; color: white; width: 100px; height: 35px; border-radius: 10%;">Ver Mais</button></a> -->
                 </div>
                 <div class="imagem-sobre1"> <!-- Posiciona a imagem de primeiro sobre -->
-                    <img src="https://picsum.photos/id/650/250/250" alt="" width="250px" height="250px">
+                    <img src="imgs/logo-krono-maior.png" alt="">
                 </div>
             </div>
         </section>
 
         <section class="team" id="team">
-
+            <div class="position-title-team">
+                <p class="title-team">Nossa Equipe</p>
+            </div>
             <div class="card-member-1">
-                <img src="https://picsum.photos/id/650/100/100" alt="" class="member-imagem">
-                <h2 class="member-name">Cristhian Hatzman</h2>
-                <p class="member-function">Full-Stack Developer</p>
+                <img src="imgs/team/arthur.png" class="member-imagem">
+                <h2 class="member-name">Arthur Fukunaga</h2><hr>
+                <p class="member-function">UX/UI Designer</p>
             </div>
 
             <div class="card-member-2">
-                <img src="https://picsum.photos/id/651/100/100" alt="" class="member-imagem">
-                <h2 class="member-name">Vinicius de Souza</h2>
-                <p class="member-function">Full-Stack Developer</p>
+                <img src="imgs/team/carlos.png" alt="" class="member-imagem">
+                <h2 class="member-name">Carlos Eduardo</h2><hr>
+                <p class="member-function">Documentação</p>
             </div>
 
             <div class="card-member-3">
-                <img src="https://picsum.photos/id/652/100/100" alt="" class="member-imagem">
-                <h2 class="member-name">João Paulo</h2>
+                <img src="imgs/team/cristhian.png" alt="" class="member-imagem">
+                <h2 class="member-name">Cristhian Hatzman</h2><hr>
                 <p class="member-function">Full-Stack Developer</p>
             </div>
 
             <div class="card-member-4">
-                <img src="https://picsum.photos/id/653/100/100" alt="" class="member-imagem">
-                <h2 class="member-name">Carlos Eduardo</h2>
-                <p class="member-function">Full-Stack Developer</p>
+                <img src="imgs/team/joaopaulo.png" alt="" class="member-imagem">
+                <h2 class="member-name">João Paulo</h2><hr>
+                <p class="member-function">UX/UI Designer</p>
             </div>
 
             <div class="card-member-5">
-                <img src="https://picsum.photos/id/654/100/100" alt="" class="member-imagem">
-                <h2 class="member-name">Arthur Fukunaga</h2>
-                <p class="member-function">Full-Stack Developer</p>
+                <img src="imgs/team/vinicius.png" alt="" class="member-imagem">
+                <h2 class="member-name">Vinicius de Souza</h2><hr>
+                <p class="member-function">Banco de Dados</p>
             </div>
 
 
