--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
                 <div class="sobre-texto"> <!-- Posiciona o texto de primeiro sobre -->
                     <h1 style="font-size: 45px; color: #E0830F; font-family: Audiowide;">Quem somos nós?</h1>
                     <p style="color: black; font-size: 20px;"><b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem expedita quidem illo, enim quasi sapiente cupiditate quas! Delectus, commodi veritatis sed deleniti modi harum minima...</b></p>
-                    <!-- <a href="#"><button style="background-color:green; color: white; width: 100px; height: 35px; border-radius: 10%;">Ver Mais</button></a> -->
                 </div>
                 <div class="imagem-sobre1"> <!-- Posiciona a imagem de primeiro sobre -->
                     <img src="imgs/logo-krono-maior.png" alt="">
@@ -78,9 +77,36 @@
                 <h2 class="member-name">Vinicius de Souza</h2><hr>
                 <p class="member-function">Banco de Dados</p>
             </div>
-
-
         </section>
+        <section class="bubatag" id="projeto">
+
+            <div class="bubatag-imagem">
+                <div class="position-imagem-bubatag">
+                    <img src="imgs/bubatag.png" alt="">
+                </div>
+            </div>
+
+            <div class="position-text-project">
+                <p style="font-family: Audiowide; font-size: 45px; color: #E0830F; margin-left: 15px;">Projeto</p>
+                <p style="font-size: 20px; font-weight: 300;"><b>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus incidunt neque ratione ipsa consectetur temporibus nihil eveniet ullam laboriosam, a unde inventore sint porro, amet modi officia assumenda saepe sequi sapiente. Quae non explicabo sed facilis quia fuga, atque, quaerat culpa sequi, dicta ipsum modi sint? Debitis exercitationem cum deserunt!</b></p>
+                <br><a href="#"><button style="background-color:green; color: white; width: 100px; height: 35px; border-radius: 10%;">Ver Mais</button></a> 
+            </div>
+        </section>
+        <footer class="footer">
+            <div class="position-logo-krono-footer">
+                <img src="imgs/logo-krono.png" alt="">
+            </div>
+            <div class="text-footer-1">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus, impedit!</p>
+            </div>
+            <div class="text-footer-2">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus, impedit!</p>
+            </div>
+            <div class="text-footer-3">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus, impedit!</p>
+            </div>
+            <p class="direitos">© 2024 Krono - Todos os direitos reservados.</p>
+        </footer>
     </div>
 </body>
 </html>
