--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
     <div class="wrapper">
     <header>
-        <section class="background-image">
-            <div class="menu">
-                <nav>
+        <section>
+            <div>
+                <nav class="menu">
                     <ul>
                         <li><img src="imgs/logo-krono.png" width="45px"></li>
                         <li><a href="#sobre">Quem somos</a></li>
@@ -26,8 +26,11 @@
                 </nav>
             </div>
             <div class="position-krono">
-                <img src="imgs/krono-principal.png" width="400px">
+                <img src="imgs/krono-principal.png">
                 <p style="font-size: 32px; color: white; font-family: Audiowide; margin-left: 15px;">Nós somos a <b style="color: #E0830F;">Krono</b></p>
+            </div>
+            <div class="primary-imagem">
+                <img src="https://picsum.photos/id/666/1920/550" alt="">
             </div>
         </section>
     </header>
@@ -51,31 +54,31 @@
             <div class="card-member-1">
                 <img src="imgs/team/arthur.png" class="member-imagem">
                 <h2 class="member-name">Arthur Fukunaga</h2><hr>
-                <p class="member-function">UX/UI Designer</p>
+                <p class="member-function"><b>UX/UI Designer</b></p>
             </div>
 
             <div class="card-member-2">
                 <img src="imgs/team/carlos.png" alt="" class="member-imagem">
                 <h2 class="member-name">Carlos Eduardo</h2><hr>
-                <p class="member-function">Documentação</p>
+                <p class="member-function"><b>Documentação</b></p>
             </div>
 
             <div class="card-member-3">
                 <img src="imgs/team/cristhian.png" alt="" class="member-imagem">
                 <h2 class="member-name">Cristhian Hatzman</h2><hr>
-                <p class="member-function">Full-Stack Developer</p>
+                <p class="member-function"><b>Full-Stack Developer</b></p>
             </div>
 
             <div class="card-member-4">
                 <img src="imgs/team/joaopaulo.png" alt="" class="member-imagem">
                 <h2 class="member-name">João Paulo</h2><hr>
-                <p class="member-function">UX/UI Designer</p>
+                <p class="member-function"><b>UX/UI Designer</b></p>
             </div>
 
             <div class="card-member-5">
                 <img src="imgs/team/vinicius.png" alt="" class="member-imagem">
                 <h2 class="member-name">Vinicius de Souza</h2><hr>
-                <p class="member-function">Banco de Dados</p>
+                <p class="member-function"><b>Banco de Dados</b></p>
             </div>
         </section>
         <section class="bubatag" id="projeto">
@@ -89,7 +92,7 @@
             <div class="position-text-project">
                 <p style="font-family: Audiowide; font-size: 45px; color: #E0830F; margin-left: 15px;">Projeto</p>
                 <p style="font-size: 20px; font-weight: 300;"><b>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus incidunt neque ratione ipsa consectetur temporibus nihil eveniet ullam laboriosam, a unde inventore sint porro, amet modi officia assumenda saepe sequi sapiente. Quae non explicabo sed facilis quia fuga, atque, quaerat culpa sequi, dicta ipsum modi sint? Debitis exercitationem cum deserunt!</b></p>
-                <br><a href="#"><button style="background-color:green; color: white; width: 100px; height: 35px; border-radius: 10%;">Ver Mais</button></a> 
+                <br><a href="#"><button style="background-color: #06D001; width: 100px; height: 35px; border-radius: 15%; border-style: none; width: 125px;">Ver Mais</button></a> 
             </div>
         </section>
         <footer class="footer">
