--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="ico/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="ico/favicon-16x16.png">
+    <link rel="manifest" href="ico/site.webmanifest">
+
     <link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet'>
     <title>Krono</title>
 </head>
@@ -21,7 +22,7 @@
                         <li><img src="imgs/logo-krono.png" width="45px"></li>
                         <li><a href="#sobre">Quem somos</a></li>
                         <li><a href="#team">Membros</a></li>
-                        <li><a href="#">Projeto</a></li>
+                        <li><a href="#projeto">Projeto</a></li>
                     </ul>
                 </nav>
             </div>
@@ -89,7 +90,7 @@
                 </div>
             </div>
 
-            <div class="position-text-project">
+            <div class="position-text-project" id="projeto">
                 <p style="font-family: Audiowide; font-size: 45px; color: #E0830F; margin-left: 15px;">Projeto</p>
                 <p style="font-size: 20px; font-weight: 300;"><b>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus incidunt neque ratione ipsa consectetur temporibus nihil eveniet ullam laboriosam, a unde inventore sint porro, amet modi officia assumenda saepe sequi sapiente. Quae non explicabo sed facilis quia fuga, atque, quaerat culpa sequi, dicta ipsum modi sint? Debitis exercitationem cum deserunt!</b></p>
                 <br><a href="#"><button style="background-color: #06D001; width: 100px; height: 35px; border-radius: 15%; border-style: none; width: 125px;">Ver Mais</button></a> 
