Criando nova pagina do projeto

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="position-text-project" id="projeto">
                 <p style="font-family: Audiowide; font-size: 45px; color: #E0830F; margin-left: 15px;">Projeto</p>
                 <p style="font-size: 20px; font-weight: 300;"><b>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus incidunt neque ratione ipsa consectetur temporibus nihil eveniet ullam laboriosam, a unde inventore sint porro, amet modi officia assumenda saepe sequi sapiente. Quae non explicabo sed facilis quia fuga, atque, quaerat culpa sequi, dicta ipsum modi sint? Debitis exercitationem cum deserunt!</b></p>
-                <br><a href="#"><button style="background-color: #06D001; width: 100px; height: 35px; border-radius: 15%; border-style: none; width: 125px;">Ver Mais</button></a> 
+                <br><a href="bubatag.html"><button style="background-color: #06D001; width: 100px; height: 35px; border-radius: 15%; border-style: none; width: 125px;">Ver Mais</button></a> 
             </div>
         </section>
         <footer class="footer">
