--- a/bubatag.html
+++ b/bubatag.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="ico/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="ico/favicon-16x16.png">
     <link rel="manifest" href="ico/site.webmanifest">
-
+    <link href="https://fonts.cdnfonts.com/css/fonarto" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet'>
     <title>Krono</title>
 </head>
@@ -21,18 +21,17 @@
                     <ul>
                         <li><img src="imgs/logo-krono.png" width="45px"></li>
                         <li><a href="#sobre">Sobre</a></li>
-                        <li><a href="#team">Problemática</a></li>
-                        <li><a href="#projeto">Solução</a></li>
-                        <li><a href="#projeto">Mercado</a></li>
+                        <li><a href="#problematica">Problemática</a></li>
+                        <li><a href="#solucao">Solução</a></li>
+                        <li><a href="#mercado">Mercado</a></li>
                     </ul>
                 </nav>
             </div>
-            <div class="position-krono">
-                <img src="imgs/krono-principal.png">
-                <p style="font-size: 32px; color: white; font-family: Audiowide; margin-left: 15px;">Nós somos a <b style="color: #E0830F;">Krono</b></p>
-            </div>
             <div class="primary-imagem">
-                <img src="https://picsum.photos/id/146/1920/560" alt="">
+                <img src="imgs/bufalo.jpg" alt="" style="width: 100%;">
+                <div class="imagem-bubatag-header">
+                    <img src="imgs/bubatag.png" alt="">
+                </div>
             </div>
         </section>
     </header>
@@ -40,7 +39,7 @@
         <section class="home2-bubatag" id="sobre">
             <div class="position-sobre">
                 <div class="sobre-texto">
-                    <h1 style="font-size: 45px; color: #05DA00; font-family: Audiowide;">Sobre</h1>
+                    <h1 style="font-size: 45px; color: #05DA00; font-family: Fonarto;">Sobre</h1>
                     <p style="color: white; font-size: 16px;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea non sint molestias facere, libero voluptatibus cumque modi quis corrupti aliquam. Ex unde eos recusandae cum dolore cupiditate voluptate, minima quisquam voluptates atque animi ut hic, explicabo necessitatibus? Laudantium iusto dolorem ipsam impedit, expedita quas iste accusantium ab tenetur libero non sint autem quo et eveniet distinctio dolores facilis nulla minima nihil architecto. Aspernatur iusto quia, facilis eum est consectetur ad earum commodi dicta velit nobis dolorem. Dolore maiores beatae delectus natus, necessitatibus perferendis voluptatem eveniet totam, temporibus obcaecati optio. Placeat sed quibusdam autem facere aperiam doloremque quasi impedit at rerum!</p>
                 </div>
                 <div class="imagem-sobre1">
@@ -52,7 +51,7 @@
         <section class="home3-bubatag" id="problematica">
             <div class="position-sobre">
                 <div class="sobre-texto-problematica">
-                    <h1 style="font-size: 45px; color: #05DA00; font-family: Audiowide;">Problemática</h1>
+                    <h1 style="font-size: 45px; color: #05DA00; font-family: Fonarto; margin-left: 200px;">Problemática</h1>
                     <p style="color: white; font-size: 16px;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea non sint molestias facere, libero voluptatibus cumque modi quis corrupti aliquam. Ex unde eos recusandae cum dolore cupiditate voluptate, minima quisquam voluptates atque animi ut hic, explicabo necessitatibus? Laudantium iusto dolorem ipsam impedit, expedita quas iste accusantium ab tenetur libero non sint autem quo et eveniet distinctio dolores facilis nulla minima nihil architecto. Aspernatur iusto quia, facilis eum est consectetur ad earum commodi dicta velit nobis dolorem. Dolore maiores beatae delectus natus, necessitatibus perferendis voluptatem eveniet totam, temporibus obcaecati optio. Placeat sed quibusdam autem facere aperiam doloremque quasi impedit at rerum!</p>
                 </div>
                 <div class="imagem-problematica">
@@ -61,38 +60,51 @@
             </div>
         </section>
 
+        <section class="home4-bubatag" id="solucao">
+            <div class="position-sobre">
+                <div class="sobre-texto">
+                    <h1 style="font-size: 45px; color: #05DA00; font-family: Fonarto;">Solução</h1>
+                    <p style="color: white; font-size: 16px;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea non sint molestias facere, libero voluptatibus cumque modi quis corrupti aliquam. Ex unde eos recusandae cum dolore cupiditate voluptate, minima quisquam voluptates atque animi ut hic, explicabo necessitatibus? Laudantium iusto dolorem ipsam impedit, expedita quas iste accusantium ab tenetur libero non sint autem quo et eveniet distinctio dolores facilis nulla minima nihil architecto. Aspernatur iusto quia, facilis eum est consectetur ad earum commodi dicta velit nobis dolorem. Dolore maiores beatae delectus natus, necessitatibus perferendis voluptatem eveniet totam, temporibus obcaecati optio. Placeat sed quibusdam autem facere aperiam doloremque quasi impedit at rerum!</p>
+                </div>
+                <div class="imagem-sobre1">
+                    <img src="imgs/croqui.png" width="300px" height="300px" alt="">
+                </div>
+            </div>
+        </section>
 
+        <section id="mercado" class="mercado-bubatag">
+            <section class="bubalinos-brasil">
+                <h1 style="color: #2F3E46; font-size: 50px; margin-top: 100px; font-family: Fonarto;">Bubalinos do Brasil</h1>
+                <p><b>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore impedit officia delectus cum omnis, perferendis animi inventore facere maiores. Harum earum odio quasi magnam ab eos vero corrupti consequuntur veritatis maiores consequatur, voluptates cum praesentium expedita accusantium, illo ut modi, ipsam doloribus? Harum molestiae minima tempore quam, sapiente assumenda suscipit qui dicta id! Accusantium maiores nihil laborum alias voluptate fugit excepturi quae nisi, odio itaque non veritatis quis similique distinctio commodi omnis provident ad numquam velit sunt sapiente libero quidem vero dignissimos. Minima, facere! Cumque id saepe ullam quisquam voluptate dolor? Cupiditate, repellat! Nam autem similique perspiciatis doloribus labore sit?</b></p>
+            </section>
 
+        <section class="rebanho-2018">
+            <div class="text-rebanho">
+                <h1 style="color: #2F3E46; font-size: 50px; margin-top: 100px; font-family: Fonarto;">Rebanho de bubalinos no Brasil em 2018</h1>
+                <p><b>De acordo com Marques (1998, p. 22): no Brasil, os búfalos são criados principalmente para a produção de carne, mas já começam a ser aproveitados, e com grande sucesso, também na produção de leite.</b></p>
+            </div>
+                <div class="imagem-rebanho">
+                    <img src="imgs/rebanho.png" alt="">
+                </div>
+            </section>
 
+        <section class="leite-producao">
+            <h1 style="padding: 20px; margin-left: 30px; color: #90A955; font-size: 50px; font-family: Fonarto;">Bubalinos e a produção de Leite</h1>
+            <p style="margin-left: 50px; color: white; width: 850px; font-size: 16px;"><b>O leite é um alimento essencial para a dieta humana, composto por gordura, proteína, açúcares, minerais e vitaminas. O leite de búfala, em particular, é destacado por seu alto valor nutritivo e maior rendimento industrial em comparação com o leite de vaca. A gordura do leite, que tem grande valor econômico, é fundamental na produção de derivados. O leite de búfala tem ganhado destaque no mercado, com a expansão das vendas de produtos como muçarela, requeijão, iogurte, ricota, cotage e queijo frescal, refletindo investimentos em produtos mais atraentes para os consumidores.</b></p>
+        </section>
 
+        <section class="leite-qualidade">
+            <div class="text-qualidade">
+                <h1 style="color: #2F3E46; font-size: 50px; font-family: Fonarto;">Qualidade do leite de Búfala e benefícios a Saúde</h1>
+                <p style="font-size: 16px; color: white"><b>O leite de búfala tem características únicas que o diferenciam, por exemplo, do leite de vaca. Segundo Valente (2019), ele é do tipo A2, por isso é: mais rico em vitaminas e proteínas do que o leite de vaca A beta-caseína representa cerca de 25 a 30% do total de proteína do leite. O leite de búfala contém apenas a beta-caseína A2, que é uma composição que faz com que seja mais digerível, se comparado ao convencional leite vaca, uma vez que possui tanto a beta-caseína A2 quanto a beta-caseína A1 (VALENTE, 2019). Na figura 6, a diferença entre o leite de vaca e o leite de búfala.</b></p>
+            </div>
+            <div class="imagem-qualidade-leite">
+                <img src="imgs/qualidade-leite.png" alt="">
+            </div>
+        </section>
+    </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <footer class="footer">
+        <footer class="footer-bubatag">
             <div class="position-logo-krono-footer">
                 <img src="imgs/logo-krono.png" alt="">
             </div>
