--- a/index.html
+++ b/index.html
@@ -24,17 +24,16 @@
                         <li><a href="#team">Membros</a></li>
                         <li><a href="#projeto">Projeto</a></li>
                     </ul>
+                    <hr color="#E0830F">
                 </nav>
-            </div>
-            <div class="position-krono">
-                <img src="imgs/krono-principal.png">
-                <p style="font-size: 32px; color: white; font-family: Audiowide; margin-left: 15px;">Nós somos a <b style="color: #E0830F;">Krono</b></p>
-            </div>
-            <div class="primary-imagem">
-                <img src="https://picsum.photos/id/666/1920/550" alt="">
             </div>
         </section>
     </header>
+
+        <div class="primary-imagem">
+            <img src="imgs/templo2.png" alt="" width="100%" height="700px">
+            <h1 class="texto-centralizado">Nós somos a Krono!</h1>
+        </div>
 
         <section class="home2" id="sobre"> <!-- Sessão home2 - Sobre -->
             <div class="position-sobre"> <!-- Posiciona o bloco de sobre primeiro -->
@@ -54,31 +53,31 @@
             </div>
             <div class="card-member-1">
                 <img src="imgs/team/arthur.png" class="member-imagem">
-                <h2 class="member-name">Arthur Fukunaga</h2><hr>
+                <h2 class="member-name">Arthur Fukunaga</h2><hr color="white">
                 <p class="member-function"><b>UX/UI Designer</b></p>
             </div>
 
             <div class="card-member-2">
                 <img src="imgs/team/carlos.png" alt="" class="member-imagem">
-                <h2 class="member-name">Carlos Eduardo</h2><hr>
+                <h2 class="member-name">Carlos Eduardo</h2><hr color="white">
                 <p class="member-function"><b>Documentação</b></p>
             </div>
 
             <div class="card-member-3">
                 <img src="imgs/team/cristhian.png" alt="" class="member-imagem">
-                <h2 class="member-name">Cristhian Hatzman</h2><hr>
+                <h2 class="member-name">Cristhian Hatzman</h2><hr color="white">
                 <p class="member-function"><b>Full-Stack Developer</b></p>
             </div>
 
             <div class="card-member-4">
                 <img src="imgs/team/joaopaulo.png" alt="" class="member-imagem">
-                <h2 class="member-name">João Paulo</h2><hr>
+                <h2 class="member-name">João Paulo</h2><hr color="white">
                 <p class="member-function"><b>UX/UI Designer</b></p>
             </div>
 
             <div class="card-member-5">
                 <img src="imgs/team/vinicius.png" alt="" class="member-imagem">
-                <h2 class="member-name">Vinicius de Souza</h2><hr>
+                <h2 class="member-name">Vinicius de Souza</h2><hr color="white">
                 <p class="member-function"><b>Banco de Dados</b></p>
             </div>
         </section>
