Correção na imagem principal da bubatag =

--- a/bubatag.html
+++ b/bubatag.html
@@ -25,9 +25,10 @@
                         <li><a href="#solucao">Solução</a></li>
                         <li><a href="#mercado">Mercado</a></li>
                     </ul>
+                    <hr color="#E0830F">
                 </nav>
             </div>
-            <div class="primary-imagem">
+            <div class="primary-imagem-bubatag">
                 <img src="imgs/bufalo.jpg" alt="" style="width: 100%;">
                 <div class="imagem-bubatag-header">
                     <img src="imgs/bubatag.png" alt="">
