--- a/index.html
+++ b/index.html
@@ -16,25 +16,23 @@
     <div class="wrapper">
     <header>
         <section>
-            <div>
                 <nav class="menu">
                     <ul>
-                        <li><img src="imgs/logo-krono.png" width="45px"></li>
+                        <li><a href="#inicio"><img src="imgs/logo-krono.png" width="45px"></a></li>
                         <li><a href="#sobre">Quem somos</a></li>
                         <li><a href="#team">Membros</a></li>
                         <li><a href="#projeto">Projeto</a></li>
                     </ul>
                     <hr color="#E0830F">
                 </nav>
-            </div>
         </section>
     </header>
-
+    <section id="inicio">
         <div class="primary-imagem">
             <img src="imgs/background-image-introducao.jpg" alt="" width="100%" height="700px">
             <h1 class="texto-centralizado">Nós somos a Krono!</h1>
         </div>
-
+    </section>
         <section class="home2" id="sobre"> <!-- Sessão home2 - Sobre -->
             <div class="position-sobre"> <!-- Posiciona o bloco de sobre primeiro -->
                 <div class="sobre-texto"> <!-- Posiciona o texto de primeiro sobre -->
@@ -116,5 +114,19 @@
             <p class="direitos">© 2024 Krono - Todos os direitos reservados.</p>
         </footer>
     </div>
+    <script>
+        document.querySelectorAll('nav a').forEach(anchor => {
+        anchor.addEventListener('click', function (e) {
+        e.preventDefault();
+            const targetId = this.getAttribute('href').slice(1);
+            const targetElement = document.getElementById(targetId);
+
+        targetElement.scrollIntoView({
+            behavior: 'smooth',
+            block: 'start'
+    });
+  });
+});
+    </script>
 </body>
 </html>
